--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,8 +2,8 @@ os: Windows Server 2012
 
 environment:
   matrix:
-  - PYTHON: C:\Python33\python.exe
-  - PYTHON: C:\Python34\python.exe
+  - PYTHON: C:\\Python33\\python.exe
+  - PYTHON: C:\\Python34\\python.exe
 
 test_script:
-  - cmd: %PYTHON% setup.py test
+  - %PYTHON% setup.py test
